--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,25 +12,285 @@
         android:layout_height="fill_parent"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
-        app:srcCompat="@drawable/brownFelt"
+        app:srcCompat="@drawable/brown_felt"
         tools:layout_editor_absoluteX="77dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_marginBottom="-100dp"
+        android:layout_weight="0"
+        android:baselineAligned="false"
+        android:clickable="true"
+        android:clipChildren="true"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        tools:layout_editor_absoluteX="0dp">
 
-    <ImageView
-        android:layout_width="166dp"
-        android:layout_height="258dp"
-        android:layout_marginLeft="252dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="100dp"
-        android:background="@android:color/transparent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.997"
-        app:srcCompat="@drawable/backOfCard" />
+        <FrameLayout
+            android:layout_width="135dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_weight="0">
+
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="80dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="60dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="40dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="20dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="0dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+        </FrameLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="86dp"
+        android:layout_height="match_parent"
+        android:layout_marginEnd="-100dp"
+        android:layout_weight="0"
+        android:baselineAligned="false"
+        android:clickable="true"
+        android:clipChildren="true"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:rotation="0"
+        android:visibility="visible"
+        app:layout_constraintEnd_toStartOf="@+id/imageView"
+        tools:layout_editor_absoluteY="202dp">
+
+        <FrameLayout
+            android:layout_width="135dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="0"
+            android:rotation="90">
+
+            <ImageView
+                android:id="@+id/imageView11"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="80dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+            <ImageView
+                android:id="@+id/imageView12"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="60dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+            <ImageView
+                android:id="@+id/imageView13"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="40dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+            <ImageView
+                android:id="@+id/imageView14"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="20dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+            <ImageView
+                android:id="@+id/imageView15"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="0dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+        </FrameLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="86dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="-100dp"
+        android:layout_weight="0"
+        android:baselineAligned="false"
+        android:clickable="true"
+        android:clipChildren="true"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:rotation="-180"
+        android:visibility="visible"
+        app:layout_constraintStart_toEndOf="@+id/imageView">
+
+        <FrameLayout
+            android:layout_width="135dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="0"
+            android:rotation="90">
+
+            <ImageView
+                android:id="@+id/imageView16"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="80dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+            <ImageView
+                android:id="@+id/imageView17"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="60dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+            <ImageView
+                android:id="@+id/imageView18"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="40dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+            <ImageView
+                android:id="@+id/imageView19"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="20dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+            <ImageView
+                android:id="@+id/imageView15"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="0dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+        </FrameLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="124dp"
+        android:layout_marginTop="-140dp"
+        android:baselineAligned="false"
+        android:clickable="true"
+        android:clipChildren="true"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:visibility="visible"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        tools:layout_editor_absoluteX="0dp">
+
+        <FrameLayout
+            android:layout_width="270dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_weight="0">
+
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="114dp"
+                android:layout_height="124dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="0dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="114dp"
+                android:layout_height="124dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="40dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="114dp"
+                android:layout_height="124dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="80dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+            <ImageView
+                android:id="@+id/imageView9"
+                android:layout_width="114dp"
+                android:layout_height="124dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="120dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+            <ImageView
+                android:id="@+id/imageView10"
+                android:layout_width="114dp"
+                android:layout_height="124dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="160dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+        </FrameLayout>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
