--- a/app/src/main/res/layout/activity_main 2.xml
+++ b/app/src/main/res/layout/activity_main 2.xml
@@ -17,50 +17,14 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/newGame"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="New Game" />
-
-        <Button
-            android:id="@+id/easyMode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Easy" />
-
-        <Button
-            android:id="@+id/hardMode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Hard" />
-
-        <Button
-            android:id="@+id/help"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Help"
-            app:iconTint="#24B84E" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="-200dp"
+        android:layout_marginBottom="-100dp"
         android:layout_weight="0"
         android:baselineAligned="false"
         android:clickable="true"
         android:clipChildren="true"
         android:gravity="center"
         android:orientation="horizontal"
-        android:translationY="30dp"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         tools:layout_editor_absoluteX="0dp">
@@ -72,12 +36,48 @@
             android:layout_weight="0">
 
             <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="80dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="60dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+            <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="50dp"
                 android:layout_height="80dp"
                 android:layout_weight="0"
                 android:background="@android:color/transparent"
                 android:translationX="40dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="20dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="0dp"
                 app:srcCompat="@drawable/back_of_card" />
 
         </FrameLayout>
@@ -107,6 +107,15 @@
             android:rotation="90">
 
             <ImageView
+                android:id="@+id/imageView11"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="80dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+            <ImageView
                 android:id="@+id/imageView12"
                 android:layout_width="50dp"
                 android:layout_height="80dp"
@@ -131,6 +140,15 @@
                 android:layout_weight="0"
                 android:background="@android:color/transparent"
                 android:translationX="20dp"
+                app:srcCompat="@drawable/back_of_card" />
+
+            <ImageView
+                android:id="@+id/imageView15"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="0dp"
                 app:srcCompat="@drawable/back_of_card" />
 
         </FrameLayout>
@@ -194,6 +212,15 @@
                 android:translationX="20dp"
                 app:srcCompat="@drawable/back_of_card" />
 
+            <ImageView
+                android:id="@+id/imageView15"
+                android:layout_width="50dp"
+                android:layout_height="80dp"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:translationX="0dp"
+                app:srcCompat="@drawable/back_of_card" />
+
         </FrameLayout>
 
     </LinearLayout>
@@ -224,7 +251,7 @@
                 android:layout_weight="0"
                 android:background="@android:color/transparent"
                 android:translationX="0dp"
-                app:srcCompat="@drawable/ace_of_spades2" />
+                app:srcCompat="@drawable/back_of_card" />
 
             <ImageView
                 android:id="@+id/imageView2"
@@ -233,7 +260,7 @@
                 android:layout_weight="0"
                 android:background="@android:color/transparent"
                 android:translationX="40dp"
-                app:srcCompat="@drawable/diamonds2" />
+                app:srcCompat="@drawable/back_of_card" />
 
             <ImageView
                 android:id="@+id/imageView8"
@@ -242,7 +269,7 @@
                 android:layout_weight="0"
                 android:background="@android:color/transparent"
                 android:translationX="80dp"
-                app:srcCompat="@drawable/hearts7" />
+                app:srcCompat="@drawable/back_of_card" />
 
             <ImageView
                 android:id="@+id/imageView9"
@@ -251,7 +278,7 @@
                 android:layout_weight="0"
                 android:background="@android:color/transparent"
                 android:translationX="120dp"
-                app:srcCompat="@drawable/king_of_hearts" />
+                app:srcCompat="@drawable/back_of_card" />
 
             <ImageView
                 android:id="@+id/imageView10"
@@ -260,7 +287,7 @@
                 android:layout_weight="0"
                 android:background="@android:color/transparent"
                 android:translationX="160dp"
-                app:srcCompat="@drawable/spades3" />
+                app:srcCompat="@drawable/back_of_card" />
 
         </FrameLayout>
 
