--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="-200dp"
+        android:layout_marginBottom="-400dp"
         android:layout_weight="0"
         android:baselineAligned="false"
         android:clickable="true"
@@ -66,18 +66,18 @@
         tools:layout_editor_absoluteX="0dp">
 
         <FrameLayout
-            android:layout_width="135dp"
+            android:layout_width="200dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight="0">
 
             <ImageView
                 android:id="@+id/imageView3"
-                android:layout_width="50dp"
-                android:layout_height="80dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_gravity="center"
                 android:layout_weight="0"
                 android:background="@android:color/transparent"
-                android:translationX="40dp"
                 app:srcCompat="@drawable/back_of_card" />
 
         </FrameLayout>
@@ -85,9 +85,9 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="86dp"
+        android:layout_width="200dp"
         android:layout_height="match_parent"
-        android:layout_marginEnd="-100dp"
+        android:layout_marginEnd="-220dp"
         android:layout_weight="0"
         android:baselineAligned="false"
         android:clickable="true"
@@ -100,7 +100,7 @@
         tools:layout_editor_absoluteY="202dp">
 
         <FrameLayout
-            android:layout_width="135dp"
+            android:layout_width="600dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="0"
@@ -108,29 +108,29 @@
 
             <ImageView
                 android:id="@+id/imageView12"
-                android:layout_width="50dp"
-                android:layout_height="80dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:layout_weight="0"
                 android:background="@android:color/transparent"
-                android:translationX="60dp"
+                android:translationX="240dp"
                 app:srcCompat="@drawable/back_of_card" />
 
             <ImageView
                 android:id="@+id/imageView13"
-                android:layout_width="50dp"
-                android:layout_height="80dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:layout_weight="0"
                 android:background="@android:color/transparent"
-                android:translationX="40dp"
+                android:translationX="220dp"
                 app:srcCompat="@drawable/back_of_card" />
 
             <ImageView
                 android:id="@+id/imageView14"
-                android:layout_width="50dp"
-                android:layout_height="80dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:layout_weight="0"
                 android:background="@android:color/transparent"
-                android:translationX="20dp"
+                android:translationX="200dp"
                 app:srcCompat="@drawable/back_of_card" />
 
         </FrameLayout>
@@ -138,9 +138,9 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="86dp"
+        android:layout_width="200dp"
         android:layout_height="match_parent"
-        android:layout_marginStart="-100dp"
+        android:layout_marginStart="-220dp"
         android:layout_weight="0"
         android:baselineAligned="false"
         android:clickable="true"
@@ -152,7 +152,7 @@
         app:layout_constraintStart_toEndOf="@+id/imageView">
 
         <FrameLayout
-            android:layout_width="135dp"
+            android:layout_width="600dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="0"
@@ -160,38 +160,38 @@
 
             <ImageView
                 android:id="@+id/imageView16"
-                android:layout_width="50dp"
-                android:layout_height="80dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:layout_weight="0"
                 android:background="@android:color/transparent"
-                android:translationX="80dp"
+                android:translationX="200dp"
                 app:srcCompat="@drawable/back_of_card" />
 
             <ImageView
                 android:id="@+id/imageView17"
-                android:layout_width="50dp"
-                android:layout_height="80dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:layout_weight="0"
                 android:background="@android:color/transparent"
-                android:translationX="60dp"
+                android:translationX="180dp"
                 app:srcCompat="@drawable/back_of_card" />
 
             <ImageView
                 android:id="@+id/imageView18"
-                android:layout_width="50dp"
-                android:layout_height="80dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:layout_weight="0"
                 android:background="@android:color/transparent"
-                android:translationX="40dp"
+                android:translationX="160dp"
                 app:srcCompat="@drawable/back_of_card" />
 
             <ImageView
                 android:id="@+id/imageView19"
-                android:layout_width="50dp"
-                android:layout_height="80dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:layout_weight="0"
                 android:background="@android:color/transparent"
-                android:translationX="20dp"
+                android:translationX="140dp"
                 app:srcCompat="@drawable/back_of_card" />
 
         </FrameLayout>
@@ -200,8 +200,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="124dp"
-        android:layout_marginTop="-140dp"
+        android:layout_height="250dp"
+        android:layout_marginTop="-270dp"
         android:baselineAligned="false"
         android:clickable="true"
         android:clipChildren="true"
@@ -212,15 +212,15 @@
         tools:layout_editor_absoluteX="0dp">
 
         <FrameLayout
-            android:layout_width="270dp"
+            android:layout_width="400dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight="0">
 
             <ImageView
                 android:id="@+id/imageView6"
-                android:layout_width="114dp"
-                android:layout_height="124dp"
+                android:layout_width="250dp"
+                android:layout_height="250dp"
                 android:layout_weight="0"
                 android:background="@android:color/transparent"
                 android:translationX="0dp"
@@ -228,8 +228,8 @@
 
             <ImageView
                 android:id="@+id/imageView2"
-                android:layout_width="114dp"
-                android:layout_height="124dp"
+                android:layout_width="250dp"
+                android:layout_height="250dp"
                 android:layout_weight="0"
                 android:background="@android:color/transparent"
                 android:translationX="40dp"
@@ -237,8 +237,8 @@
 
             <ImageView
                 android:id="@+id/imageView8"
-                android:layout_width="114dp"
-                android:layout_height="124dp"
+                android:layout_width="250dp"
+                android:layout_height="250dp"
                 android:layout_weight="0"
                 android:background="@android:color/transparent"
                 android:translationX="80dp"
@@ -246,8 +246,8 @@
 
             <ImageView
                 android:id="@+id/imageView9"
-                android:layout_width="114dp"
-                android:layout_height="124dp"
+                android:layout_width="250dp"
+                android:layout_height="250dp"
                 android:layout_weight="0"
                 android:background="@android:color/transparent"
                 android:translationX="120dp"
@@ -255,8 +255,8 @@
 
             <ImageView
                 android:id="@+id/imageView10"
-                android:layout_width="114dp"
-                android:layout_height="124dp"
+                android:layout_width="250dp"
+                android:layout_height="250dp"
                 android:layout_weight="0"
                 android:background="@android:color/transparent"
                 android:translationX="160dp"
