--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,137 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal">>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/player1"
+                android:layout_width="200dp"
+                android:layout_height="202dp"
+                android:layout_gravity="center"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:scaleX=".4"
+                android:scaleY=".4"
+                android:translationX="-5dp"
+                android:translationY="5dp"
+                app:srcCompat="@drawable/player1" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:text="Score: 3"
+                android:textAlignment="center"
+                android:textColor="#FBFAFA"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/player2"
+                android:layout_width="200dp"
+                android:layout_height="202dp"
+                android:layout_gravity="center"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:scaleX=".4"
+                android:scaleY=".4"
+                android:translationX="-5dp"
+                android:translationY="5dp"
+                app:srcCompat="@drawable/player2" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:text="Score: 4"
+                android:textAlignment="center"
+                android:textColor="#FDFDFD"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/player3"
+                android:layout_width="200dp"
+                android:layout_height="202dp"
+                android:layout_gravity="center"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:scaleX=".4"
+                android:scaleY=".4"
+                android:translationX="-5dp"
+                android:translationY="5dp"
+                app:srcCompat="@drawable/player3" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:text="Score: 1"
+                android:textAlignment="center"
+                android:textColor="#FBFDFB"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/player4"
+                android:layout_width="200dp"
+                android:layout_height="202dp"
+                android:layout_gravity="center"
+                android:layout_weight="0"
+                android:background="@android:color/transparent"
+                android:scaleX=".4"
+                android:scaleY=".4"
+                android:translationX="-5dp"
+                android:translationY="5dp"
+                app:srcCompat="@drawable/player4" />
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:text="Score: 2"
+                android:textAlignment="center"
+                android:textColor="#4CAF50"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="-400dp"
         android:layout_weight="0"
         android:baselineAligned="false"
@@ -60,7 +191,7 @@
         android:clipChildren="true"
         android:gravity="center"
         android:orientation="horizontal"
-        android:translationY="30dp"
+        android:translationY="50dp"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         tools:layout_editor_absoluteX="0dp">
@@ -95,6 +226,7 @@
         android:gravity="center"
         android:orientation="vertical"
         android:rotation="0"
+        android:translationY="20dp"
         android:visibility="visible"
         app:layout_constraintEnd_toStartOf="@+id/imageView"
         tools:layout_editor_absoluteY="202dp">
@@ -148,6 +280,7 @@
         android:gravity="center"
         android:orientation="vertical"
         android:rotation="-180"
+        android:translationY="20dp"
         android:visibility="visible"
         app:layout_constraintStart_toEndOf="@+id/imageView">
 
